# ai-cam

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aiwork/: continue-prompt.md  memory.md
docs/: roadmap.md
examples/: config.sample.yaml
src/ai_cartoon_cam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aicartooncam/: __init__.py  cli.py  config.py  filters.py  pipeline.py
tests/: conftest.py  test_config.py  test_filters.py
